统一使用新的全局分页响应, coupon模块重构
