# docs/swagger.json
@@ -31,6 +31,20 @@
                         "description": "available/used/expired",
                         "name": "status",
                         "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 1,
+                        "description": "页码",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 20,
+                        "description": "每页数量",
+                        "name": "page_size",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -192,7 +206,7 @@
                         "type": "integer",
                         "default": 10,
                         "description": "每页条数",
-                        "name": "size",
+                        "name": "page_size",
                         "in": "query"
                     },
                     {
@@ -215,6 +229,63 @@
                                     "properties": {
                                         "data": {
                                             "$ref": "#/definitions/handler.OrderListResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "参数错误",
+                        "schema": {
+                            "$ref": "#/definitions/app.Response"
+                        }
+                    },
+                    "401": {
+                        "description": "未登录",
+                        "schema": {
+                            "$ref": "#/definitions/app.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/orders/poll/{order_num}": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "订单"
+                ],
+                "summary": "轮询订单创建状态",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "订单号",
+                        "name": "order_num",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/app.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/handler.OrderWithPaymentResponse"
                                         }
                                     }
                                 }
@@ -271,7 +342,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/handler.OrderWithPaymentResponse"
+                                            "$ref": "#/definitions/handler.PollOrderResponse"
                                         }
                                     }
                                 }
@@ -504,7 +575,7 @@
                         "type": "integer",
                         "default": 10,
                         "description": "每页条数",
-                        "name": "size",
+                        "name": "page_size",
                         "in": "query"
                     }
                 ],
@@ -622,7 +693,7 @@
                         "type": "integer",
                         "default": 10,
                         "description": "每页条数",
-                        "name": "size",
+                        "name": "page_size",
                         "in": "query"
                     }
                 ],
@@ -1397,6 +1468,26 @@
                 }
             }
         },
+        "handler.PollOrderResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "order": {
+                    "$ref": "#/definitions/service.OrderWithPayment"
+                },
+                "order_num": {
+                    "type": "string"
+                },
+                "payment_id": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
         "handler.ProductListResponse": {
             "type": "object",
             "properties": {
@@ -1503,6 +1594,9 @@
                     "type": "string"
                 },
                 "payment_id": {
+                    "type": "string"
+                },
+                "status": {
                     "type": "string"
                 }
             }
@@ -1656,6 +1750,38 @@
                 "OrderStatusFailed"
             ]
         },
+        "model.Payment": {
+            "type": "object",
+            "properties": {
+                "amount_cents": {
+                    "type": "integer"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "deleted_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "notify_data": {
+                    "type": "string"
+                },
+                "order_id": {
+                    "type": "integer"
+                },
+                "payment_id": {
+                    "type": "string"
+                },
+                "status": {
+                    "$ref": "#/definitions/model.PaymentStatus"
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
         "model.PaymentStatus": {
             "type": "string",
             "enum": [
@@ -1741,6 +1867,20 @@
                 },
                 "valid_to": {
                     "type": "string"
+                }
+            }
+        },
+        "service.OrderWithPayment": {
+            "type": "object",
+            "properties": {
+                "coupon": {
+                    "$ref": "#/definitions/service.MyCoupon"
+                },
+                "order": {
+                    "$ref": "#/definitions/model.Order"
+                },
+                "payment": {
+                    "$ref": "#/definitions/model.Payment"
                 }
             }
         },
