# internal/model/payment.go
@@ -1,6 +1,8 @@
 package model
 
 import (
+	"time"
+
 	"gorm.io/gorm"
 )
 
@@ -14,12 +16,15 @@ const (
 )
 
 type Payment struct {
-	gorm.Model
-	OrderID     uint          `gorm:"not null;uniqueIndex" json:"order_id"`
-	PaymentID   string        `gorm:"type:varchar(64);unique;not null" json:"payment_id"`
-	AmountCents int64         `gorm:"not null" json:"amount_cents"`
-	Status      PaymentStatus `gorm:"type:varchar(20);default:'pending'" json:"status"`
-	NotifyData  string        `gorm:"type:varchar(20)" json:"notify_data"`
+	ID          uint           `gorm:"primarykey" json:"id"`
+	CreatedAt   time.Time      `json:"created_at"`
+	UpdatedAt   time.Time      `json:"updated_at"`
+	DeletedAt   gorm.DeletedAt `gorm:"index" json:"deleted_at" swaggertype:"string"`
+	OrderID     uint           `gorm:"not null;uniqueIndex" json:"order_id"`
+	PaymentID   string         `gorm:"type:varchar(64);unique;not null" json:"payment_id"`
+	AmountCents int64          `gorm:"not null" json:"amount_cents"`
+	Status      PaymentStatus  `gorm:"type:varchar(20);default:'pending'" json:"status"`
+	NotifyData  string         `gorm:"type:varchar(20)" json:"notify_data"`
 }
 
 func (Payment) TableName() string {
